[gd_scene load_steps=16 format=3 uid="uid://locyufhf4wwf"]

[ext_resource type="Texture2D" uid="uid://dte6i2jlr7iix" path="res://Sprites/UI/bar_03.png" id="1_pywh5"]
[ext_resource type="Script" path="res://Prefabs/UI/MenuOption.gd" id="1_vxgfm"]
[ext_resource type="FontFile" uid="uid://7btu78ff8nvs" path="res://Fonts/monkey.ttf" id="2_02e4j"]
[ext_resource type="Texture2D" uid="uid://0wti48dqq2oo" path="res://Sprites/boardgame_icons/Default (64px)/d10.png" id="2_onrr4"]
[ext_resource type="AudioStream" uid="uid://jwicokfdvos4" path="res://Sounds/sfx_menuoption_selected.wav" id="4_iy57v"]
[ext_resource type="Texture2D" uid="uid://d0te7sxory3qm" path="res://Sprites/UI/bar_03_on.png" id="5_lbg6l"]
[ext_resource type="Texture2D" uid="uid://dcpi5ofpe6c4q" path="res://Sprites/Effects/particles_01.png" id="7_5lit2"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fhcml"]
radius = 36.0
height = 270.0

[sub_resource type="Animation" id="Animation_oba5p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_pywh5")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("D10:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("D10:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("D10:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("D10:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("GPUParticles2D:emitting")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_664gg"]
resource_name = "Select"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("1_pywh5"), ExtResource("5_lbg6l")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -40), Vector2(0, 0)]
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("D10:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("D10:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, -218, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("D10:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.7, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(-1, 1), Vector2(1, 1), Vector2(-1, 1), Vector2(1, 1), Vector2(-1, 1), Vector2(1, 1), Vector2(-1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("D10:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.6, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("GPUParticles2D:emitting")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/7/type = "method"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("GPUParticles2D")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"restart"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_57cgf"]
_data = {
"RESET": SubResource("Animation_oba5p"),
"Select": SubResource("Animation_664gg")
}

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_1a6be"]
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Curve" id="Curve_gogak"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_x1xuk"]
curve = SubResource("Curve_gogak")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_onhei"]
particle_flag_disable_z = true
direction = Vector3(0, -1, 0)
flatness = 0.34
initial_velocity_min = 98.3
initial_velocity_max = 98.3
gravity = Vector3(0, 98, 0)
radial_accel_min = 0.45
radial_accel_max = 4.6
scale_max = 2.0
alpha_curve = SubResource("CurveTexture_x1xuk")
anim_offset_max = 1.0

[node name="MenuOption" type="Node2D"]
script = ExtResource("1_vxgfm")

[node name="D10" type="Sprite2D" parent="."]
texture = ExtResource("2_onrr4")

[node name="sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_pywh5")

[node name="Label" type="Label" parent="sprite"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -195.0
offset_top = -61.5
offset_right = -87.0
offset_bottom = -19.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_02e4j")
theme_override_font_sizes/font_size = 48
text = "Option"
horizontal_alignment = 1

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_fhcml")

[node name="sfx_select" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_iy57v")
pitch_scale = 1.2
bus = &"SoundFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_57cgf")
}
speed_scale = 2.0

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_1a6be")
position = Vector2(0, -37)
scale = Vector2(2.33434, 2.33434)
emitting = false
process_material = SubResource("ParticleProcessMaterial_onhei")
texture = ExtResource("7_5lit2")
lifetime = 2.0
one_shot = true
speed_scale = 3.0
explosiveness = 1.0
fixed_fps = 60
local_coords = true

[node name="Delay" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Button" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = -137.0
offset_top = -40.0
offset_right = 137.0
offset_bottom = 38.0
mouse_default_cursor_shape = 2

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Delay" to="." method="_on_delay_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
